brain/sources/prod-metadata/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <displayFormat>Payment-{000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>