brain/sources/prod-metadata/objects/Payment__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>Amount paid against this invoice</description>
    <label>Amount Paid</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>