brain/sources/prod-metadata/objects/Payment__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>Invoice__r.Candidate__r.FirstName + &apos; &apos; +  Invoice__r.Candidate__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>