brain/sources/prod-metadata/objects/Payment__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>