brain/sources/prod-metadata/objects/Payment__c/fields/CS_Notes__c.field-meta.xml
<CustomField>
    <fullName>CS_Notes__c</fullName>
    <inlineHelpText>What CS did to work / resolve this dispute.</inlineHelpText>
    <label>CS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>