brain/sources/prod-metadata/objects/Payment__c/fields/CS_Person__c.field-meta.xml
<CustomField>
    <fullName>CS_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The CS team member who worked this payment issue (stamped by the Manage Payment Issue flow).</inlineHelpText>
    <label>CS Person</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Payments (CS Person)</relationshipLabel>
    <relationshipName>Payments_CS_Person</relationshipName>
    <type>Lookup</type>
</CustomField>