brain/sources/prod-metadata/objects/Payment__c/fields/Deposit_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_ID__c</fullName>
    <inlineHelpText>QuickBooks internal account ID</inlineHelpText>
    <label>Deposit Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>