brain/sources/prod-metadata/objects/Payment__c/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <inlineHelpText>Amount deposited to the bank for this payment (the QuickBooks Deposit line amount).</inlineHelpText>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>