brain/sources/prod-metadata/objects/Payment__c/fields/Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Date__c</fullName>
    <inlineHelpText>Date the deposit reached the bank account (QuickBooks Deposit TxnDate).</inlineHelpText>
    <label>Deposit Date</label>
    <type>Date</type>
</CustomField>