brain/sources/prod-metadata/objects/Payment__c/fields/Deposit_Status__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Status__c</fullName>
    <inlineHelpText>Where this payment is in the deposit lifecycle. Pending = charged but not yet deposited; Deposited = funds in the bank; Reversed = deposit was reversed (NSF/chargeback).</inlineHelpText>
    <label>Deposit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>