brain/sources/prod-metadata/objects/Payment__c/fields/Deposit_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_To_Account__c</fullName>
    <label>Deposit To Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>