brain/sources/prod-metadata/objects/Payment__c/fields/Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes__c</fullName>
    <inlineHelpText>What Finance did to resolve this dispute (refund receipt #, method, amount, journal entry, etc.).</inlineHelpText>
    <label>Finance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>