brain/sources/prod-metadata/objects/Payment__c/fields/Finance_Person__c.field-meta.xml
<CustomField>
    <fullName>Finance_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Finance team member who worked this payment issue (stamped by the Manage Payment Issue flow).</inlineHelpText>
    <label>Finance Person</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Payments (Finance Person)</relationshipLabel>
    <relationshipName>Payments_Finance_Person</relationshipName>
    <type>Lookup</type>
</CustomField>