brain/sources/prod-metadata/objects/Payment__c/fields/Last_Deposit_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Deposit_Check_Date__c</fullName>
    <inlineHelpText>When the deposit information on this payment was last updated from QuickBooks.</inlineHelpText>
    <label>Last Deposit Check</label>
    <type>DateTime</type>
</CustomField>