brain/sources/prod-metadata/objects/Payment__c/fields/Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Name_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Hyperlink</label>
    <type>Text</type>
</CustomField>