brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date when the payment was made</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>