brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Amount__c</fullName>
    <inlineHelpText>Amount disputed / returned, from the notification email.</inlineHelpText>
    <label>Issue Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>