brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Case_Number__c</fullName>
    <inlineHelpText>Intuit case number from the notification email.</inlineHelpText>
    <label>Case / Reference #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>