brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Outcome__c</fullName>
    <inlineHelpText>How the dispute/return was ultimately resolved.</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Re-collected</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>