brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Reason__c</fullName>
    <inlineHelpText>Reason given in the QuickBooks notification (e.g. the ACH return reason).</inlineHelpText>
    <label>Issue Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>