brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Received_Date__c</fullName>
    <inlineHelpText>Date the dispute/return notification was received in Salesforce.</inlineHelpText>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>