brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Resolved_Date__c</fullName>
    <inlineHelpText>Date the dispute was marked resolved.</inlineHelpText>
    <label>Resolved Date</label>
    <type>Date</type>
</CustomField>