brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Respond_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Respond_By__c</fullName>
    <inlineHelpText>Deadline to respond to the dispute (from the email). Use this to prioritize.</inlineHelpText>
    <label>Respond By (Chargebacks Only)</label>
    <type>Date</type>
</CustomField>