brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Status__c</fullName>
    <inlineHelpText>Where this dispute/return is in the CS workflow.</inlineHelpText>
    <label>Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Finance</fullName>
            </value>
            <value>
                <fullName>Submitted to Bank</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>