brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Type__c</fullName>
    <inlineHelpText>What kind of payment problem this is (set automatically from the QuickBooks notification email).</inlineHelpText>
    <label>Payment Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dispute</fullName>
                <label>Chargeback / Dispute</label>
            </value>
            <value>
                <fullName>ACH Return</fullName>
            </value>
            <value>
                <fullName>Bank Transfer Canceled</fullName>
            </value>
            <value>
                <fullName>Retrieval Request</fullName>
                <label>Retrieval Request (pre-chargeback)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>