brain/sources/prod-metadata/objects/Payment__c/fields/Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source__c</fullName>
    <label>Payment Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Payment</fullName>
                <default>true</default>
                <label>Invoice Payment</label>
            </value>
            <value>
                <fullName>Sales Receipt</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>