brain/sources/prod-metadata/objects/Payment__c/fields/QB_Deposit_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Deposit_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>QuickBooks Deposit Id that moved this payment&apos;s funds into the bank account.</inlineHelpText>
    <label>QB Deposit ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>