brain/sources/prod-metadata/objects/Payment__c/fields/QB_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>QB_Doc_Number__c</fullName>
    <inlineHelpText>QuickBooks sales receipt document number</inlineHelpText>
    <label>QB Doc Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>