brain/sources/prod-metadata/objects/Payment__c/fields/QB_Operation__c.field-meta.xml
<CustomField>
    <fullName>QB_Operation__c</fullName>
    <label>QB Operation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>