brain/sources/prod-metadata/objects/Payment__c/fields/QB_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Id__c</fullName>
    <externalId>true</externalId>
    <label>QB Payment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>