brain/sources/prod-metadata/objects/Payment__c/fields/QB_Sales_Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Sales_Receipt_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>QuickBooks Sales Receipt internal ID (for recurring)</inlineHelpText>
    <label>QB Sales Receipt ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>