brain/sources/prod-metadata/objects/Payment__c/fields/Refund_Receipt_Created__c.field-meta.xml
<CustomField>
    <fullName>Refund_Receipt_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when the Refund Receipt has been created in QuickBooks (required for canceled bank transfers).</inlineHelpText>
    <label>Refund Receipt Created</label>
    <type>Checkbox</type>
</CustomField>