brain/sources/prod-metadata/objects/Payment__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <description>Scheduled date of the payment</description>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>