brain/sources/prod-metadata/objects/Payment__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>