brain/sources/prod-metadata/objects/Payment__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <inlineHelpText>Outcome of the charge attempt (used for recurring/retry tracking). Separate from Payment Status, which marks a completed payment as Paid.</inlineHelpText>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>